@@ -1,7 +1,7 @@
 package com.wilzwert.myjobs.core.domain.model.user;
 
 
-import com.wilzwert.myjobs.core.domain.exception.ValidationException;
+import com.wilzwert.myjobs.core.domain.shared.exception.ValidationException;
 import com.wilzwert.myjobs.core.domain.model.job.Job;
 import com.wilzwert.myjobs.core.domain.model.job.JobId;
 import com.wilzwert.myjobs.core.domain.shared.validation.ErrorCode;
@@ -24,9 +24,8 @@ public class UserTest {
 
     @Test
     public void whenInvalid_thenUserBuildShouldThrowValidationException() {
-        ValidationException exception = assertThrows(ValidationException.class, () -> {
-            User user = User.builder().build();
-        });
+        User.Builder builder = User.builder();
+        ValidationException exception = assertThrows(ValidationException.class, builder::build);
         assertNotNull(exception);
         assertEquals(5, exception.getErrors().getErrors().entrySet().size());
         assertEquals(ErrorCode.FIELD_CANNOT_BE_EMPTY, exception.getErrors().getErrors().get("email").getFirst().code());
@@ -38,9 +37,8 @@ public class UserTest {
 
     @Test
     public void whenEmailAndUsernameInvalid_thenUserBuildShouldThrowValidationException() {
-        ValidationException exception = assertThrows(ValidationException.class, () -> {
-            User user = User.builder().username("T").email("invalid").build();
-        });
+        User.Builder builder = User.builder().username("T").email("invalid");
+        ValidationException exception = assertThrows(ValidationException.class, builder::build);
         assertNotNull(exception);
         assertEquals(5, exception.getErrors().getErrors().entrySet().size());
         assertEquals(ErrorCode.INVALID_EMAIL, exception.getErrors().getErrors().get("email").getFirst().code());
@@ -48,6 +46,20 @@ public class UserTest {
         assertEquals(ErrorCode.FIELD_CANNOT_BE_EMPTY, exception.getErrors().getErrors().get("lastName").getFirst().code());
         assertEquals(ErrorCode.FIELD_TOO_SHORT, exception.getErrors().getErrors().get("username").getFirst().code());
         assertEquals(ErrorCode.FIELD_CANNOT_BE_EMPTY, exception.getErrors().getErrors().get("password").getFirst().code());
+    }
+
+    @Test
+    public void whenFieldErrors_thenUserBuildShouldThrowValidationException() {
+        User.Builder builder = User.builder().username("T").email("invalid").jobFollowUpReminderDays(45);
+        ValidationException exception = assertThrows(ValidationException.class, builder::build);
+        assertNotNull(exception);
+        assertEquals(6, exception.getErrors().getErrors().entrySet().size());
+        assertEquals(ErrorCode.INVALID_EMAIL, exception.getErrors().getErrors().get("email").getFirst().code());
+        assertEquals(ErrorCode.FIELD_CANNOT_BE_EMPTY, exception.getErrors().getErrors().get("firstName").getFirst().code());
+        assertEquals(ErrorCode.FIELD_CANNOT_BE_EMPTY, exception.getErrors().getErrors().get("lastName").getFirst().code());
+        assertEquals(ErrorCode.FIELD_TOO_SHORT, exception.getErrors().getErrors().get("username").getFirst().code());
+        assertEquals(ErrorCode.FIELD_CANNOT_BE_EMPTY, exception.getErrors().getErrors().get("password").getFirst().code());
+        assertEquals(ErrorCode.FIELD_VALUE_TOO_BIG, exception.getErrors().getErrors().get("jobFollowUpReminderDays").getFirst().code());
     }
 
     @Test
@@ -61,6 +73,7 @@ public class UserTest {
                 .username("username")
                 .firstName("firstName")
                 .lastName("lastName")
+                .jobs(Collections.emptyList())
                 .build();
         Instant after = Instant.now();
 
@@ -71,10 +84,11 @@ public class UserTest {
         assertEquals("username", user.getUsername());
         assertEquals("firstName", user.getFirstName());
         assertEquals("lastName", user.getLastName());
-        assertEquals(Lang.EN, user.getLang());
+        assertEquals(User.DEFAULT_LANG, user.getLang());
         assertNotNull(user.getEmailValidationCode());
         assertEquals(EmailStatus.PENDING, user.getEmailStatus());
-        assertEquals("USER", user.getRole());
+        assertEquals(User.DEFAULT_ROLE, user.getRole());
+        assertEquals(User.DEFAULT_JOB_FOLLOW_UP_REMINDER_DAYS, user.getJobFollowUpReminderDays());
         assertNull(user.getResetPasswordToken());
         assertNull(user.getResetPasswordExpiresAt());
         Instant createdAt = user.getCreatedAt();
@@ -97,6 +111,7 @@ public class UserTest {
             .profile("Job profile")
             .salary("TBD")
             .userId(userId)
+
             .build()
         );
         User user = User.builder()
@@ -107,6 +122,7 @@ public class UserTest {
                 .firstName("firstName")
                 .lastName("lastName")
                 .role("SOME_ROLE")
+                .jobFollowUpReminderDays(7)
                 .lang(Lang.FR)
                 .createdAt(now)
                 .updatedAt(now)
@@ -124,19 +140,21 @@ public class UserTest {
         assertEquals("username", user.getUsername());
         assertEquals("firstName", user.getFirstName());
         assertEquals("lastName", user.getLastName());
+        assertEquals(7, user.getJobFollowUpReminderDays());
         assertEquals(Lang.FR, user.getLang());
         assertEquals("SOME_ROLE", user.getRole());
         assertEquals(now, user.getCreatedAt());
         assertEquals(now, user.getUpdatedAt());
         assertEquals("code", user.getEmailValidationCode());
         assertEquals(1, user.getJobs().size());
-        assertEquals("http://www.example.com", user.getJobs().get(0).getUrl());
+        assertEquals("http://www.example.com", user.getJobs().getFirst().getUrl());
     }
 
     @Test
     public void whenPasswordWeak_thenCreateUserShouldThrowValidationException() {
         ValidationException exception = assertThrows(ValidationException.class, () ->  {
-            User user = User.create("test@example.com",  "password", "username", "firstName", "lastName", null,"weakPassword");
+            User.Builder builder = User.builder().email("test@example.com").password("password").username("username").firstName("firstName").lastName("lastName").jobFollowUpReminderDays(7);
+            User.create(builder,"weakPassword");
         });
 
         assertNotNull(exception);
@@ -147,7 +165,18 @@ public class UserTest {
     @Test
     public void shouldCreateNewUser() {
         Instant before = Instant.now();
-        User user = User.create("test@example.com",  "password", "username", "firstName", "lastName", Lang.FR,"Abcd1234!");
+        User user = User.create(
+                User.builder()
+                    .email("test@example.com")
+                    .password("password")
+                    .username("username")
+                    .firstName("firstName")
+                    .lastName("lastName")
+                    .jobFollowUpReminderDays(7)
+                    .lang(Lang.FR)
+                    .jobs(Collections.emptyList()),
+        "Abcd1234!"
+        );
         Instant after = Instant.now();
         assertNotNull(user);
         assertNotNull(user.getId());
@@ -156,6 +185,7 @@ public class UserTest {
         assertEquals("username", user.getUsername());
         assertEquals("firstName", user.getFirstName());
         assertEquals("lastName", user.getLastName());
+        assertEquals(7, user.getJobFollowUpReminderDays());
         assertEquals(Lang.FR, user.getLang());
         assertNotNull(user.getEmailValidationCode());
         assertEquals(EmailStatus.PENDING, user.getEmailStatus());
@@ -181,10 +211,12 @@ public class UserTest {
                 .lastName("lastName")
                 .emailStatus(EmailStatus.VALIDATED)
                 .emailValidationCode("code")
+                .jobFollowUpReminderDays(6)
+                .jobs(Collections.emptyList())
                 .build();
 
         Instant before = Instant.now();
-        User updatedUser = user.update("email@example.com", "changedUsername", "John", "Doe");
+        User updatedUser = user.update("email@example.com", "changedUsername", "John", "Doe", 8);
         Instant after = Instant.now();
 
         assertNotNull(updatedUser);
@@ -192,7 +224,8 @@ public class UserTest {
         assertEquals("changedUsername", updatedUser.getUsername());
         assertEquals("John", updatedUser.getFirstName());
         assertEquals("Doe", updatedUser.getLastName());
-        assertEquals(Lang.EN, updatedUser.getLang());
+        assertEquals(8, updatedUser.getJobFollowUpReminderDays());
+        assertEquals(User.DEFAULT_LANG, updatedUser.getLang());
         assertEquals("email@example.com", updatedUser.getEmail());
 
         Instant updatedAt = updatedUser.getUpdatedAt();
@@ -213,11 +246,28 @@ public class UserTest {
                 .emailValidationCode("code")
                 .build();
 
-        assertEquals(Lang.EN, user.getLang());
+        assertEquals(User.DEFAULT_LANG, user.getLang());
 
         User updatedUser = user.updateLang(Lang.FR);
         assertEquals(Lang.FR, updatedUser.getLang());
         assertNotSame(user, updatedUser);
 
+    }
+    @Test
+    void shouldSaveJobFollowUpReminderSentAt() {
+        UserId userId = UserId.generate();
+        User user = User.builder()
+                .id(userId)
+                .email("test@example.com")
+                .password("password")
+                .username("username")
+                .firstName("firstName")
+                .lastName("lastName")
+                .emailStatus(EmailStatus.VALIDATED)
+                .emailValidationCode("code")
+                .build();
+        assertNull(user.getJobFollowUpReminderSentAt());
+        User updatedUser = user.saveJobFollowUpReminderSentAt();
+        assertTrue(updatedUser.getJobFollowUpReminderSentAt().getEpochSecond() - Instant.now().getEpochSecond() < 1);
     }
 }
